feat: Spring Boot upgrade to 3.3.13: initial changes of dependencies and source files. Project version is set to 5.0.0-SNAPSHOT.