@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -42,7 +42,7 @@ public class ResponseCacheHelper {
             }
             if (!uiProperty.getInheritedValue().equals(uiProperty.getValue())
                     && StringUtils.isNotEmpty(uiProperty.getValue())) {
-                String keyCachedResponse = String.format("%s_%s%s", projectId,
+                String keyCachedResponse = "%s_%s%s".formatted(projectId,
                         configuration.get("baseUrl"),
                         configuration.get("endpoint"));
                 CacheServices.getResponseCacheService().evict(keyCachedResponse);
