@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -151,7 +151,7 @@ public class SituationControllerHelper extends ControllerHelper {
                         uiTemplate.getId(),
                         uiTemplate.getParent() == null ? null : uiTemplate.getParent().getClassName()));
             }
-            step.setName(String.format("%s sends %s to %s with template %s",
+            step.setName("%s sends %s to %s with template %s".formatted(
                     ControllerHelper.getName(step.getSender()), ControllerHelper.getName(step.getOperation()),
                     ControllerHelper.getName(step.getReceiver()), ControllerHelper.getName(step.returnStepTemplate())));
             step.setDelay(uiSituation.getDelay());
