@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -58,7 +58,7 @@ public class UIProcessItem extends UIObject {
     }
 
     public String getDuration() {
-        return String.format("%.3f (s)", duration / 1000.0);
+        return "%.3f (s)".formatted(duration / 1000.0);
     }
 
     @Override
