@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -87,7 +87,7 @@ public abstract class DeprecatedStorable implements Storable {
 
     @Override
     public Storable copy(Storable newParent) throws CopyException {
-        throw new CopyException(String.format("[%s] is not storable at all", this));
+        throw new CopyException("[%s] is not storable at all".formatted(this));
     }
 
     /**
