@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -26,6 +26,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
+import java.util.concurrent.ThreadLocalRandom;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -224,7 +225,7 @@ public class TestRunInfo {
         extension.setSectionId(getLogRecordId());
         CallChainInstance instance = new CallChainInstance();
         instance.setName("Errors");
-        instance.setID(BigInteger.valueOf(1000 + (int) (Math.random() * (999001))));
+        instance.setID(BigInteger.valueOf(1000 + (int) (ThreadLocalRandom.current().nextDouble() * (999001))));
         instance.getContext().setTC(tc);
         instance.extend(extension);
         tc.setInitiator(instance);
@@ -347,22 +348,19 @@ public class TestRunInfo {
             currentObject = (JSONObject) currentObject.get(element);
         }
         element = arrayOfElements[arrayOfElements.length - 1]; //last element
-        if ((itemValue instanceof String && StringUtils.isEmpty((String) itemValue)) || Objects.isNull(itemValue)) {
+        if ((itemValue instanceof String string && StringUtils.isEmpty(string)) || Objects.isNull(itemValue)) {
             currentObject.putIfAbsent(element, itemValue);
-        } else if (itemValue instanceof JSONObject) {
-            JSONObject childJsonObject = (JSONObject) itemValue;
+        } else if (itemValue instanceof JSONObject childJsonObject) {
             JSONObject newChildJsonObject = new JSONObject();
             performContext(childJsonObject, newChildJsonObject);
             if (currentObject.containsKey(element) && "".equals(currentObject.get(element))) {
                 currentObject.remove(element);
             }
             currentObject.putIfAbsent(element, newChildJsonObject);
-        } else if (itemValue instanceof JSONArray) {
-            JSONArray childJsonArray = (JSONArray) itemValue;
+        } else if (itemValue instanceof JSONArray childJsonArray) {
             JSONArray newChildJsonArray = new JSONArray();
             for (Object obj : childJsonArray) {
-                if (obj instanceof JSONObject) {
-                    JSONObject childJsonObject = (JSONObject) obj;
+                if (obj instanceof JSONObject childJsonObject) {
                     JSONObject newChildJsonObject = new JSONObject();
                     performContext(childJsonObject, newChildJsonObject);
                     newChildJsonArray.add(newChildJsonObject);
@@ -391,8 +389,7 @@ public class TestRunInfo {
             JSONArray newChildJsonArray = new JSONArray();
 
             for (Object obj : childJsonArray) {
-                if (obj instanceof JSONObject) {
-                    JSONObject childJsonObject = (JSONObject) obj;
+                if (obj instanceof JSONObject childJsonObject) {
                     JSONObject newChildJsonObject = new JSONObject();
                     performContext(childJsonObject, newChildJsonObject);
                     newChildJsonArray.add(newChildJsonObject);
@@ -613,7 +610,7 @@ public class TestRunInfo {
                 BigInteger internalProjectId = CoreObjectManager.getInstance().getSpecialManager(StubProject.class,
                         SearchManager.class).getEntityInternalIdByUuid(projectUuid);
                 if (internalProjectId == null) {
-                    String error = String.format("ITF-project was not found by UUID = %s", projectUuid);
+                    String error = "ITF-project was not found by UUID = %s".formatted(projectUuid);
                     LOGGER.error(error);
                     throw new IllegalArgumentException(error);
                 } else {
