@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -121,7 +121,7 @@ public class TestRunInfoBuilder {
             }
             testRunInfo.setCallchainsToExecute(callchainRunInfos);
         } catch (Exception ex) {
-            throw testRunInfo.reportException(String.format("Exception getting default dataset(s): %s %s",
+            throw testRunInfo.reportException("Exception getting default dataset(s): %s %s".formatted(
                     ex.getMessage(), (ex.getCause() == null) ? "" : "\nCaused by: " + ex.getCause().getMessage()));
         }
     }
@@ -140,7 +140,7 @@ public class TestRunInfoBuilder {
             }
             testRunInfo.setCallchainsToExecute(callchainRunInfos);
         } catch (Exception ex) {
-            throw testRunInfo.reportException(String.format("Exception getting datasets(s): %s %s", ex.getMessage(),
+            throw testRunInfo.reportException("Exception getting datasets(s): %s %s".formatted(ex.getMessage(),
                     (ex.getCause() == null) ? "" : "\nCaused by: " + ex.getCause().getMessage()));
         }
     }
@@ -199,7 +199,7 @@ public class TestRunInfoBuilder {
     }
 
     public static String getCallchainNotFoundErrorMessage(String idOrName) {
-        return String.format("Can't find a callchain with %s: %s", idOrName.startsWith("~") ? "id" : "name", idOrName);
+        return "Can't find a callchain with %s: %s".formatted(idOrName.startsWith("~") ? "id" : "name", idOrName);
     }
 
     private static void setSelectedDataset(TestRunInfo testRunInfo, Matcher matcher, String datasetFullPath) {
@@ -239,7 +239,7 @@ public class TestRunInfoBuilder {
                         + "'%s' isn't found.", splittedFullPath[0]));
             }
         } catch (IllegalArgumentException ex) {
-            throw testRunInfo.reportException(String.format("Exception getting dataset by path '%s': %s %s",
+            throw testRunInfo.reportException("Exception getting dataset by path '%s': %s %s".formatted(
                     datasetFullPath,
                     ex.getMessage(),
                     (ex.getCause() == null) ? "" : "\nCaused by: " + ex.getCause().getMessage()));
@@ -284,7 +284,7 @@ public class TestRunInfoBuilder {
                         + "'%s' isn't found.", splittedFullPath[0]));
             }
         } catch (IllegalArgumentException ex) {
-            throw testRunInfo.reportException(String.format("Exception getting dataset by path '%s': %s %s",
+            throw testRunInfo.reportException("Exception getting dataset by path '%s': %s %s".formatted(
                     datasetFullPath,
                     ex.getMessage(),
                     (ex.getCause() == null) ? "" : "\nCaused by: " + ex.getCause().getMessage()));
@@ -303,7 +303,7 @@ public class TestRunInfoBuilder {
                 }
             }
         } catch (Exception ex) {
-            throw testRunInfo.reportException(String.format("Exception getting default dataset: %s %s",
+            throw testRunInfo.reportException("Exception getting default dataset: %s %s".formatted(
                     ex.getMessage(), (ex.getCause() == null) ? "" : "\nCaused by: " + ex.getCause().getMessage()));
         }
     }
