@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -197,14 +197,14 @@ public class VelocityTemplateEngine implements TemplateEngine {
         }
         Object owner = internalContextAdapter.get(TemplateEngine.OWNER);
         if (Objects.nonNull(owner)) {
-            if (owner instanceof System) {
-                return ((System) owner).getProjectId();
-            } else if (owner instanceof Template) {
-                Object templateParent = ((Template) owner).getParent();
-                if (templateParent instanceof Operation) {
-                    return ((Operation) templateParent).getProjectId();
-                } else if (templateParent instanceof System) {
-                    return ((System) templateParent).getProjectId();
+            if (owner instanceof System system1) {
+                return system1.getProjectId();
+            } else if (owner instanceof Template template) {
+                Object templateParent = template.getParent();
+                if (templateParent instanceof Operation operation) {
+                    return operation.getProjectId();
+                } else if (templateParent instanceof System system) {
+                    return system.getProjectId();
                 }
             }
         }
@@ -274,7 +274,7 @@ public class VelocityTemplateEngine implements TemplateEngine {
             LOGGER.trace("String processed, result is: {}", string);
             return string;
         } catch (Exception e) {
-            throw new VelocityException(String.format("Error occurred while processing of %s: %s",
+            throw new VelocityException("Error occurred while processing of %s: %s".formatted(
                     StringUtils.isBlank(coords)
                             ? "template '" + (isOwnerNameNotNull ? owner.getName() : LOG_TAG) + "'" : coords,
                     e.getMessage()), e);
