@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -145,7 +145,7 @@ public class KafkaOutboundTransport extends AbstractCamelOutboundTransport {
 
     private void setAuthParameters(KafkaEndpoint endpoint, Map<String, String> authProps) {
         if (!authProps.isEmpty()) {
-            String saslJaasConfig = String.format("%s required username=\"%s\" password=\"%s\";",
+            String saslJaasConfig = "%s required username=\"%s\" password=\"%s\";".formatted(
                     authProps.get("saslModule"), authProps.get("saslUsername"), authProps.get("saslPassword"));
             endpoint.getConfiguration().setSaslJaasConfig(saslJaasConfig);
             endpoint.getConfiguration().setSaslMechanism(authProps.get("saslMechanism"));
